--- a/.eslintrc
+++ b/.eslintrc
@@ -17,12 +17,13 @@ rules:
   react/no-multi-comp: off
   # rules that impossible to implement in ui from airbnb config
   lines-between-class-members: off # may be fixed with babel 7
-  react/require-default-props: off
+  react/require-default-props:
+    - error
+    - forbidDefaultForRequired: false
   react/default-props-match-prop-types: off # dosn't work with `babel-plugin-flow-react-proptypes`
   react/jsx-one-expression-per-line: off
   react/destructuring-assignment: off
   jsx-a11y/anchor-is-valid: off
-  react/prop-types: off
 
 globals:
   InputEvent: true
