--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -15,6 +15,7 @@ jobs:
           registry-url: 'registry.npmjs.org'
       # - run: yarn install
       # # - run: yarn build-storybook
+      - run: yarn --frozen-lockfile
       - name: Run script file
         run: ./.github/scripts/build-prevesion.sh
         shell: bash
