--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/setup-node@v2
         with: 
           cache: 'yarn'
-          registry-url: 'registry.npmjs.org'
+          registry-url: 'https://registry.npmjs.org'
       # - run: yarn install
       # # - run: yarn build-storybook
       - run: yarn --frozen-lockfile
