--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -5,6 +5,7 @@ on:
 env:
   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
   GITHUB_TOKEN: ${{ github.token }}
+  REGISTRY-URL: 'https://registry.npmjs.org'
 
 jobs:
   build:
@@ -16,7 +17,7 @@ jobs:
       - uses: actions/setup-node@v2
         with: 
           cache: 'yarn'
-          registry-url: 'https://registry.npmjs.org'
+          registry-url: ${REGISTRY-URL}
       # - run: yarn install
       # # - run: yarn build-storybook
       - run: yarn --frozen-lockfile
