--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "build:typescript-types": "tsc --noEmit false --emitDeclarationOnly",
     "watch": "yarn build --watch",
     "snyk": "snyk test --dev --severity-threshold=medium",
+    "tokens": "node ./style-dictionary/config.ts",
     "//": "---        NPM hooks section        ---",
     "postinstall": "move-bin; true",
     "prepublishOnly": "yarn build"
@@ -113,7 +114,8 @@
     "styled-components": "5.3.5",
     "typescript": "^4.4.4",
     "versionize": "^1.0.6",
-    "whatwg-fetch": "^3.0.0"
+    "whatwg-fetch": "^3.0.0",
+    "style-dictionary": "3.0.3"
   },
   "dependencies": {
     "@babel/runtime": "^7.4.5",
